--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,3 +162,184 @@
 .resend-mail {
   display: inline-block;
 }
+
+
+
+
+
+.width {
+  width: 50%;
+}
+
+.your-name {
+  display: flex;
+}
+
+.first-name {
+  margin-left: 16px;
+}
+
+.asterisk {
+  color: red;
+}
+
+.title {
+  font-size: 12px;
+  color: #545658;
+}
+
+.box {
+  margin-top: 5px;
+}
+
+.input-style {
+  appearance: none;
+  -webkit-appearance: none;
+}
+
+.make-button {
+  width: 100%;
+  background-color: #01bfbd;
+  border: 1px solid #01bfbd;
+  color: white;
+}
+
+.make-button:hover {
+  transition: all .3s;
+  background-color: #01a6a4;
+}
+
+.course {
+  display: flex;
+  flex-direction: column;
+}
+
+.around-box:not(first-child) {
+  margin-top: 20px;
+}
+
+.text-input {
+  box-sizing: border-box;
+  border-radius: 3px;
+  border: 1px solid #d9d9d9;
+  color: #545658;
+  height: 36px;
+  width: 100%;
+  padding: 5px;
+  font-size: 13px;
+  line-height: 2;
+  background-color: #fbfbfb;
+}
+
+.text-input:focus {
+  outline: none;
+  background-color: white;
+  border-color: rgb(0, 156, 161, .5);
+  box-shadow: 0 0 0 2px rgb(0, 156, 161, .1);
+}
+
+.input-textarea {
+  height: 100px;
+  resize: none;
+}
+
+.checkbox {
+  margin-top: 10px;
+}
+
+.checkbox:first-child {
+  margin-top: 0px;
+}
+
+.input {
+  display: none;
+}
+
+.gender-box {
+  display: flex;
+  color: #545658;
+}
+
+.gender-box span {
+  position: relative;
+  display: inline-block;
+  padding: 3px 3px 3px 20px;
+  cursor: pointer;
+}
+
+.gender-box span::before {
+  content: '';
+  background-color: #fbfbfb;
+  position: absolute;
+  left: 0;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  border: 1px solid #d9d9d9;
+}
+
+.gender-item :checked + span::after {
+  content: '';
+  position: absolute;
+  background-color: #01bfbd;
+  width: 8px;
+  height: 8px;
+  left: 4px;
+  top: 7px;
+  border-radius: 50%;
+}
+.gender-item {
+  margin-left: 15px;
+}
+
+.gender-item:first-child {
+  margin-left: 0;
+}
+
+.your-from {
+  position: relative;
+}
+
+.your-from::after {
+  position: absolute;
+  content: '';
+  border-right: 2px solid #d9d9d9;
+  border-bottom: 2px solid #d9d9d9;
+  height: 5px;
+  width: 5px;
+  display: inline-block;
+  right: 10px;
+  top: 60%;
+  transform: rotate(45deg);
+}
+
+.select {
+  margin-top: 8px;
+}
+
+.check-mark::before {
+  content: '';
+  left: 0;
+  position: absolute;
+  height: 15px;
+  width: 15px;
+  border: 1px solid #d9d9d9;
+}
+
+.input:checked + .check-mark::after {
+  position: absolute;
+  content: '';
+  border-right: 3px solid #01bfbd;
+  border-bottom: 3px solid #01bfbd;
+  height: 16px;
+  width: 8px;
+  bottom: 2px;
+  left: 6px;
+  transform: rotate(45deg);
+}
+
+.check-mark {
+  position: relative;
+  padding-left: 25px;
+}
+
