--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,12 @@
   background-color: #01a6a4;
 }
 
+.make-button:active {
+  color: #01a6a4;
+  background-color: white;
+  border-color: #d9d9d9;
+}
+
 .course {
   display: flex;
   flex-direction: column;
@@ -343,3 +349,4 @@
   padding-left: 25px;
 }
 
+.
